--- a/app/work/page.mdx
+++ b/app/work/page.mdx
@@ -1,9 +1,9 @@
-import { AnimatedName } from '@/app/n/animated-name.tsx';
+import { AnimatedName } from '@/app/components/animated-name.tsx';
 
 export const metadata = {
   title: 'Work',
   alternates: {
-    canonical: '/n/work',
+    canonical: '/work',
   },
 };
 
@@ -17,30 +17,28 @@ export function Small({ children }) {
 
 <AnimatedName />
 
-On a mission to build products developers [love](/n/devtools), and along the way, teach the next generation of developers. Here's a summary of my work so far.
+Here's a summary of my work so far.
 
-## Vercel
+## eClinicalWorks
 
-<Small>VP of Product</Small>
+<Small>Software intern, May 2024 - August 2024</Small>
 
-I joined [Vercel](https://vercel.com/home) early to grow [Next.js](https://nextjs.org/) and our developer community. I built our Developer Relations team to teach the community about our products.
+On the summer of 2024, I interned at eClinicalworks, a healthcare IT company. I worked on a team that was building a new patient portal for their EHR system. 
+I was responsible for building a RAG model with ChatGPT 4.0 to assist patient with routine queries. Using AI agents, deployed as microservices, I built a system that responded to patient queries in real-time. Some of my learnings were vectore databases, AI agents, query decomposition and refinement.
 
-We spoke at conferences, wrote blog posts, and created videos. We built open-source examples and contributed back to the [product](/n/devtools). We [translated customer pain](https://twitter.com/kelseyhightower/status/1105985400110112768) back into the product roadmap. I [shipped](https://twitter.com/leeerob/status/1608900031859527682) a lot of code.
 
-Since joining Vercel in 2020, Next.js has grown 1000%, now with 1 million active developers. Next.js is one of the top software projects on GitHub and used to build [wonderful products](https://nextjs.org/showcase).
+## Schneider Electric
 
-## Hy-Vee
+<Small>Software Engineer, 2021 - 2023</Small>
 
-<Small>Senior Software Engineer, 2018 - 2020</Small>
+Schneider Electric is a multinational corporation that specializes in energy management and automation solutions. I worked on a team that maintained 500,000 webpages using SDL tridion, java springboot and react.
+Primarily, I was responsible for developing an rest api endpoint for 15 stakeholders and served 100,000 users. Along the way I gained experience in the complete SDLC working on almost every aspect of the project from design to deployment. 
 
-Hy-Vee, an almost 100-year-old grocery chain in the United States, wanted to build a new version of their digital storefront. I joined a team of [product engineers](/n/product-engineers) working across web and mobile to rebuild their legacy .NET application (~500k MAU) with React and React Native.
+## Schneider Electric
 
-On the frontend, I led our move from a custom webpack and React configuration to Next.js and the latest React patterns. In the process, I shared my learnings online, helping educate members of the React and Next.js community by creating courses.
+<Small>Software intern, Jan 2021  - August 2021</Small>
 
-Throughout my two years, I was able to work on some hard problems: decoupling a decade old monolith into microservices, working with a federated GraphQL API, learning and occasionally managing a Kubernetes cluster, building and implementing a design system, incrementally migrating individual components and routes to a new framework and infrastructure, and more.
 
-## Workiva
-
-<Small>Software Engineer, 2015 - 2018</Small>
-
-Workiva ($WK) is a cloud platform for data reporting and compliance. During my time at Workiva, I gained my first production experience using React. I worked on tooling to help predict and alert and regressions in our SaaS platform, building a product similar to open-source tools like Sentry.
+ChatGPT said:
+ChatGPT
+I worked on a dynamic team focused on building a product recommendation engine for 20,000 products, where I developed the front-end using ReactJS. Additionally, I authored a Python script to crawl 500,000 websites, which significantly improved the inclusivity of language by reducing non-inclusive terms by 40%. My contributions extended to enhancing traffic redirection strategies, which increased solution page traffic by 14%. I also led technical upskilling sessions for over 1,000 employees, boosting their proficiency in Docker, SEO, and data analysis. Furthermore, I developed an automation script for partner training documentation, which saved over 100 man-hours per week, streamlining the process and enhancing operational efficiency.
