--- a/app/work/page.mdx
+++ b/app/work/page.mdx
@@ -24,21 +24,16 @@ Here's a summary of my work so far.
 <Small>Software intern, May 2024 - August 2024</Small>
 
 On the summer of 2024, I interned at eClinicalworks, a healthcare IT company. I worked on a team that was building a new patient portal for their EHR system. 
-I was responsible for building a RAG model with ChatGPT 4.0 to assist patient with routine queries. Using AI agents, deployed as microservices, I built a system that responded to patient queries in real-time. Some of my learnings were vectore databases, AI agents, query decomposition and refinement.
+I was responsible for building a RAG model with langchain and openai api to assist patient with routine queries. Using AI agents, deployed as microservices, I built a system that responded to patient queries in real-time. Some of my learnings were vector databases, AI agents, query decomposition and refinement.
 
 
 ## Schneider Electric
 
 <Small>Software Engineer, 2021 - 2023</Small>
 
-Schneider Electric is a multinational corporation that specializes in energy management and automation solutions. I worked on a team that maintained 500,000 webpages using SDL tridion, java springboot and react.
-Primarily, I was responsible for developing an rest api endpoint for 15 stakeholders and served 100,000 users. Along the way I gained experience in the complete SDLC working on almost every aspect of the project from design to deployment. 
+Schneider Electric is a multinational corporation that specializes in energy management and automation solutions. I worked primarily on the backend of the partner channel (mySchneider) and served 2M users and developed 30+ apis and 2 microservices. My primary tech stack was SpringBoot, Hibernate, PostgreSQL, GraphQL, and Redis to name a few. Along the way I gained experience in the complete SDLC working on almost every aspect of the project from design to deployment. 
 
 ## Schneider Electric
 
 <Small>Software intern, Jan 2021  - August 2021</Small>
-
-
-ChatGPT said:
-ChatGPT
 I worked on a dynamic team focused on building a product recommendation engine for 20,000 products, where I developed the front-end using ReactJS. Additionally, I authored a Python script to crawl 500,000 websites, which significantly improved the inclusivity of language by reducing non-inclusive terms by 40%. My contributions extended to enhancing traffic redirection strategies, which increased solution page traffic by 14%. I also led technical upskilling sessions for over 1,000 employees, boosting their proficiency in Docker, SEO, and data analysis. Furthermore, I developed an automation script for partner training documentation, which saved over 100 man-hours per week, streamlining the process and enhancing operational efficiency.
